--- a/style.css
+++ b/style.css
@@ -22,21 +22,17 @@ h1 {
     justify-content: center;
 }
 
-.flag {
-    width: 30px;
-    height: auto;
-    margin: 0 10px;
-}
-
-/* Estilo para los módulos */
+/* Estilo para el contenedor de los módulos */
 .modules {
     width: 80%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
-    margin-bottom: 20px;
 }
 
+
+/* Estilo general para los módulos */
 .module {
     background-color: #fff;
     border-radius: 8px;
@@ -44,6 +40,9 @@ h1 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-bottom: 20px;
+    width: 85%; 
+    box-sizing: border-box;
 }
 
 .module:hover {
@@ -57,7 +56,14 @@ h1 {
     text-align: center;
 }
 
+/* Estilo para el módulo de intro */
+#intro {
+   width: 106%;
+}
+
+
 /* Estilo para la lista de regiones */
+
 #regions-list ul {
     display: flex;
     flex-wrap: wrap;
@@ -176,27 +182,33 @@ svg {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4); /* Fondo semitransparente en la web al abrirse el modal */
     justify-content: center;
     align-items: center;
 }
 
 .modal-content {
-    background-color: #f0f0f0;
+    background-color: #f0f0f0; /* Color de fondo del modal */
     margin: 5% auto; /* Ajusta el margen superior e inferior */
     padding: 20px;
     border: 1px solid #888;
     width: 80%; /* Ancho del modal */
     max-width: 600px; /* Ancho máximo */
-    max-height: 90vh; /* Alto máximo para evitar corte en pantallas pequeñas */
+    max-height: 85vh; /* Alto máximo para evitar corte en pantallas pequeñas */
     overflow-y: auto; /* Agrega scroll si el contenido excede el alto máximo */
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    position: relative;
 }
 
 .close {
     color: #aaa;
-    float: right;
+    position: absolute;
+    top: 15px;
+    right: 15px;
     font-size: 28px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .close:hover,
@@ -207,20 +219,96 @@ svg {
 }
 
 /* Estilo para los títulos dentro del modal */
-h2 {
+.modal-content h2 {
     margin-top: 0;
-}
-
-h3 {
-    margin-bottom: 10px;
+    text-align: center;
 }
 
 /* Estilo para el contenido dentro del modal */
-ul {
+.modal-content ul {
     list-style-type: none;
     padding: 0;
 }
 
-ul li {
+.modal-content ul li {
     padding: 5px;
+}
+
+/* Estilo para el botón "Ver más" */
+.modal-content a {
+    display: block; /* Cambiado de inline-block a block */
+    padding: 10px 20px;
+    margin: 15px auto; /* Centrar el botón */
+    background-color: #007BFF;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
+    width: fit-content; /* Ajusta el ancho al contenido */
+    text-align: center; /* Centrar el texto dentro del botón */
+}
+
+.modal-content a:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
+}
+
+/* Estilos para páginas de intro país */
+/* Estilo para el botón "Volver atrás" */
+#back-button {
+    display: none; /* Se muestra solo si se viene desde el modal */
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    padding: 10px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+#back-button:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
+}
+
+/* Estilo para el contenido principal */
+.content {
+    padding: 50px;
+    max-width: 800px;
+    margin: 0 auto;
+    background-color: #f0f0f0; 
+    border-radius: 10px;
+}
+
+/* Estilo para el botón "Ver mapa y regiones" */
+.view-map-button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.view-map-button:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
+}
+
+/* Estilo para las páginas de regiones */
+#full-content {
+    padding: 50px;
+    max-width: 1300px;
+    margin: 0 auto;
+    background-color: #f0f0f0; 
+    border-radius: 10px;
 }
